Add Entity Profiler